fix z-index on firefox thinking it's a hex value

--- a/src/postcss/glightbox.css
+++ b/src/postcss/glightbox.css
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999999 !important;
+    z-index: 9999999 !important;
     overflow: hidden;
     touch-action: none;
     text-size-adjust: 100%;
